--- a/src/pages/t/no-bullshit/index.astro
+++ b/src/pages/t/no-bullshit/index.astro
@@ -9,10 +9,12 @@ import noBull from "./_files/no-bullshit.svg?url";
       <h1 itemprop="name">No Bullshit</h1>
       <p itemprop="abstract">
         A small reminder: you know how bullshit smells. Start saying no to
-        bullshit.
+        bullshit. Feel free to use this nice sign that <abbr
+          title="me, an Al image generator, and all the artists whose unpaid work trained said image generator"
+          >we</abbr
+        > made for you.
       </p>
     </header>
-
     <figure
       itemscope
       itemtype="https://schema.org/ImageObject"
